# HandyAI

./: .gitignore  README.md  TODO.txt  handy.py  handy_ide.py  install.py  main.py  pyproject.toml  requirements.txt  talker.py
data/: config.yaml  gui.yaml
data/ollama_models/: zero_temp_4k_mistral_7b.txt
docs/: TODO.txt  example_code.md  readme.md
examples/: gui_example.py  talker.py
examples/chat/: gui_chat.py  simple_chat.py  single_chat.py
examples/functions/: custom_call.py  simple_call.py
examples/tasks/: simple_task.py
llm/: ollama.py
logger/: output.py
router/: router.py
src/handy/: exceptions.py
src/handy/agents/: simple_agent.py
src/handy/gui/: __init__.py  web.py
src/handy/llm/: __init__.py  base.py  ollama_llm.py  store.py
src/handy/logger/: __init__.py  output.py
src/handy/rag/: lance_db.py
src/handy/tasks/: simple_task.py
src/handy/tools/: run_python.py  simple_tool.py  tool.py
src/ide/: console.py  file_tree.py  helpers.py  llm_chat.py  python_repl.py  python_tree.py  searchbox.py  settings.py  text_editor.py  virtual_env.py
test/: test_rag.py
test/llm/: test_base.py  test_ollama_llm.py  test_store.py
test/tools/: test_tool_conversion.py  test_tool_running.py
tests/: test_venv.py
tests/function_calling/: simple_test.py  test_function_calls.py  test_python_generation.py
tests/tools_tests/: test_tool_creation.py
texts/: use_tool.txt
